--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,11 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+https://www.youtube.com/watch?v=AEhRgdce-10
+<div class="container top-margin">
+  <div layout="row" layout-sm="column">
+    <form name="mform" style="width:400px">
+      <md-input-container>
+        <label>Movie id:</label>
+        <input ng-model="newMovie">
+      </md-input-container>
+      <md-button md-no-ink class="md-primary" ng-click="main.AddMovie()">Add new movie</md-button>
+    </form>
+  </div>
