--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,1 @@
-https://www.youtube.com/watch?v=AEhRgdce-10
-<div class="container top-margin">
-  <div layout="row" layout-sm="column">
-    <form name="mform" style="width:400px">
-      <md-input-container>
-        <label>Movie id:</label>
-        <input ng-model="newMovie">
-      </md-input-container>
-      <md-button md-no-ink class="md-primary" ng-click="main.AddMovie()">Add new movie</md-button>
-    </form>
-  </div>
+ <video-gallery> </video-gallery>
