--- a/app/views/video_gallery.html
+++ b/app/views/video_gallery.html
@@ -1,10 +1,13 @@
 https://www.youtube.com/watch?v=4JOAqRS_lms </br>
 https://youtu.be/vJ3a_AuEW18 </br>
 ZBCOMG2F2Zk  </br>
+https://www.youtube.com/watch?v=n5scparvQWE </br>
 https://www.youtube.com/watch?v=enpDdpCS37A </br>
 https://vimeo.com/138882294 </br>
-https://vimeo.com/143831946</br>
+https://vimeo.com/143831946</br></br>
 <!-- Add and remove movie -->
+<div ng-controller="paginationCtrl as pagi" class="row">
+
 <div class="container top-margin">
   <div layout="row" layout-sm="column">
     <form name="mform" style="width:400px">
@@ -12,54 +15,93 @@ https://vimeo.com/143831946</br>
         <label>Movie id:</label>
         <input ng-model="main.newMovie">
       </md-input-container>
-      <md-button md-no-ink class="md-primary" ng-click="main.AddMovie()">Add new movie</md-button>
+      <md-button md-no-ink class="md-primary" ng-click="main.processMovie()">Add new movie</md-button>
     </form>
   </div>
-  <md-button class="btn btn-default pull-left" ng-click="main.removeAll()">Remove All</md-button>
-</div>
-<!-- /Add and remove movie -->
-<!-- orderByfilter -->
- <select ng-model="orderList" class="pull-right">
-   <option selected="selected" value="view">view</option>
-   <option value="like">like</option>
-   <option value="favorite">favorite</option>
- </select>
-<!-- /orderByfilter -->
-<!-- movie List -->
-<div ng-repeat="info in main.movieList | orderBy: orderList track by $index ">
-  <iframe ng-src="{{main.trustSrc(info.url)}}" width="500" height="213" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  <div><button ng-click="main.removeVideo (info.movieID, $index)" class="btn btn-default pull-right">Remove</button></div>
-  </br>
-<div ng-show='info.view > 0'>
 
-  Likes: {{ info.like }},
-  View: {{info.view}},
-  Favorite: {{info.favorite}},
-  Dislike: {{info.dislike}},
-  Comment: {{info.comment}}
+  <!-- /Add and remove movie -->
+  <!-- orderBy and checkbox filter -->
+  <div class="pull-right">
+    <button class="btn btn-default btn-xs" ng-click="main.changeView('list')">list</button>
+    <button class="btn btn-default btn-xs" ng-click="main.changeView('grid')">grid</button>
+    <p >Filter by: <select ng-model="main.orderList" >
+      <option value="like">like</option>
+      <option value="view">view</option>
+      <option value="favorite">favorite</option>
+      <option value="dislike">dislike</option>
+      <option value="comment">comment</option>
+      <option value="-addTime">newest</option>
+      <option value="addTime">oldest</option>
+    </select>
+  </p>
+  Favorites only <input type="checkbox" ng-model="main.showFav" value="myFavorite" >
+</div>
+<!-- /orderBy and checkbox filter  -->
+</div></br></br>
+<!-- /End of container -->
+
+<!-- movie List, style List -->
+<div ng-show="main.layout == 'list'" class="boxShadow movieSpace" ng-repeat="info in main.movieList | startFrom:pagi.currentPage*pagi.pageSize | limitTo:pagi.pageSize | orderBy: main.orderList | filter: (!!main.showFav || undefined) && main.showFav track by $index ">
+  <iframe  class="iframeShadow" ng-src="{{main.trustSrc(info.url)}}" width="500" height="213" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <div class="floatTop">
+    <button ng-click="main.favoriteProc (info.movieID, 'add' )" class="btn btn-default pull-right addFav"></button></br>
+    <button ng-click="main.favoriteProc (info.movieID, 'remove')" class="btn btn-default pull-right removeFav"></button></br>
+    <button ng-click="main.removeVideo (info.movieID, $index)" class="btn btn-default pull-right deleteIcon"></button></br>
+    <div class="pull-right faved" ng-show = "info.myFavorite" ></div></br>
+  </div>
+
+    </br>
+    <div ng-show = "info.view" >
+      Likes: {{ info.like }},
+      View: {{info.view}},
+      Favorite: {{info.favorite}},
+      Dislike: {{info.dislike}},</br>
+      Comment: {{info.comment}},
+      Added: {{info.addTime}}
+    </div>
+
+</div>
+<!-- /movie List, style List -->
+
+<!-- movie List, style grid -->
+<div ng-show="main.layout == 'grid'" class="boxShadow movieSpace grid" ng-repeat="info in main.movieList | startFrom:pagi.currentPage*pagi.pageSize | limitTo:pagi.pageSize | orderBy: main.orderList | filter: (!!main.showFav || undefined) && main.showFav track by $index ">
+  <iframe  class="iframeShadow" ng-src="{{main.trustSrc(info.url)}}" width="150" height="150" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <div class="floatTop">
+    <button ng-click="main.favoriteProc (info.movieID, 'add' )" class="btn btn-default pull-right addFav"></button></br>
+    <button ng-click="main.favoriteProc (info.movieID, 'remove')" class="btn btn-default pull-right removeFav"></button></br>
+    <button ng-click="main.removeVideo (info.movieID, $index)" class="btn btn-default pull-right deleteIcon"></button></br>
+    <div class="pull-right faved" ng-show = "info.myFavorite" ></div></br>
+  </div>
+
+    </br>
+    <div ng-show = "info.view" >
+      Likes: {{ info.like }},
+      View: {{info.view}},</br>
+      Favorite: {{info.favorite}},
+      Dislike: {{info.dislike}},</br>
+      Comment: {{info.comment}},</br>
+      Added: {{info.addTime}}
+    </div>
+
+</div>
+<!-- /movie List, style grid -->
+
+</br></br>
+<div class="bot">
+<button class="btn btn-default btn-s" ng-disabled="pagi.currentPage == 0" ng-click="pagi.currentPage = pagi.currentPage-1">Previous</button>
+{{pagi.currentPage+1}} / {{pagi.numberOfPages()}}
+<button class="btn btn-default btn-s" ng-disabled="pagi.currentPage >= pagi.movieListt.length/pagi.pageSize - 1" ng-click="pagi.currentPage = pagi.currentPage + 1">Next</button>
+</br>
+</br>
+
+<p>Movies displayed:
+    <button class="btn btn-default btn-xs" ng-click="pagi.setPageSize(1)">1</button>
+    <button class="btn btn-default btn-xs" ng-click="pagi.setPageSize(5)">5</button>
+    <button class="btn btn-default btn-xs" ng-click="pagi.setPageSize(25)">25</button>
+    <button class="btn btn-default btn-xs" ng-click="pagi.setPageSize(50)">50</button>
+</p>
+
+<md-button class="btn btn-default " ng-click="main.removeAll()">Remove All</md-button>
+
 </div>
 </div>
-<!-- /movie List -->
-<!--
-Tabela wygląda tak:
-
-[
-{comment: "589",
-dislike: "327",
-favorite: "0",
-favourite: false,
-like: "18595",
-movieID: "4JOAqRS_lms",
-url: "https://www.youtube.com/embed/4JOAqRS_lms?rel=0&amp;showinfo=0",
-view: "2328366"},
-
-{comment: "0",
-dislike: "0",
-favorite: "0",
-favourite: false,
-like: "0",
-movieID: "enpDdpCS37A",
-url: "https://www.youtube.com/embed/enpDdpCS37A?rel=0&amp;showinfo=0",
-view: "242"}
-]
--->
