Poprawione przekazywanie filmow

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,4 @@
+https://www.youtube.com/watch?v=5NV6Rdv1a3I <br>
 <!-- <button class="marginActionBtns btn btn-default glyphicon glyphicon-heart" ng-click="main.testMain.getInfo()"></button> -->
 <!-- Linijka powyzej jest do testowania wywolywania funkcji z prototypu. -->
 <!-- Options panel -->
@@ -39,7 +40,7 @@
   <div class="col-md-12 boxShadow addMargin">
     <label>Movie:</label>
     <input ng-model="main.newMovie"></input>
-    <button class="btn btn-default btn-s" ng-click="main.processMovie()">Add</button>
+    <button class="btn btn-default btn-s" ng-click="main.processMovie(main.newMovie)">Add</button>
   </div>
   <!-- /Movie input -->
 
