--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,13 @@
 <!-- Options panel -->
+
 <div id="optionsPanel" class="panel-group col-md-2 ">
   <div class="boxShadow addMargin panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#optionsPanel" data-target="#collapse1">Options</a>
+        <a data-toggle="collapse" data-parent="#optionsPanel" data-target="#collapse">Options</a>
       </h4>
     </div>
-    <div id="collapse1" class="panel-collapse collapse">
+    <div id="collapse" class="panel-collapse collapse">
       <ul class="list-group">
         <li class="list-group-item">
           <label>Filter:</label> <select ng-model="main.orderList" >
@@ -69,6 +70,54 @@
           {{info.addTime}}
         </div>
       </div>
+
+      <!-- komentarze-->
+      <div id="commentPanel" class="col-md-offset-1 col-md-11 col-xs-offset-1 col-xs-11 ">
+        <div class="">
+          <div class="pull-right panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#commentPanel" data-target="#collapse{{$index + 1}}">Comments</a>
+            </h4>
+          </div>
+
+          <div id="collapse{{$index + 1}}" class="col-md-12 panel-collapse collapse">
+
+            <form class="">
+
+              <div class="col-md-4 col-xs-12">
+                <label>Nick:</label>
+                <textarea ng-model="main.newCommentUser" class="form-control" name="myTextBox" cols="10" rows="1" required>
+                </textarea>
+              </div>
+
+              <div class="commentBorder col-md-11 col-xs-12">
+                <label>Comment:</label>
+                <textarea ng-model="main.newCommentBody" class="form-control" name="myTextBox2" cols="50" rows="3" required>
+                </textarea>
+              </div>
+              <div class="col-md-11 col-xs-12">
+                <button type="submit" class="btn btn-default pull-right" ng-click="main.addComment(main.newCommentUser, main.newCommentBody, info.movieID)">Add</button>
+              </div>
+
+            </form>
+
+            <div ng-repeat="com in info.userComments track by $index" class="col-md-12 col-xs-12 " >
+              <div class="glyphicon glyphicon-user col-md-8 col-xs-12">
+                {{com.user}}
+              </div>
+              <div class="commentBorder col-md-12 col-xs-12">
+                {{com.comment}}
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <!--komentarze -->
+
+
     </div>
     <!-- /movie List, style List -->
 
